--- a/Mod_4/linear-algebra/linear-algebra.ipynb
+++ b/Mod_4/linear-algebra/linear-algebra.ipynb
@@ -119,11 +119,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "vector shape: (6,) \n",
+      "\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "matrix1 shape: (2, 3) \n",
+      "\n",
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "matrix2 shape: (3, 2) \n",
+      "\n",
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n",
+      "tensor shape: (2, 2, 2) \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -146,9 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[5, 6],\n",
+       "       [7, 8]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# mess around with indexing a tensor\n",
     "\n",
@@ -166,9 +204,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.539392014169456"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "np.linalg.norm(vector)"
    ]
@@ -184,9 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "matrix1 shape: (2, 3) \n",
+      "\n",
+      "[[1 4]\n",
+      " [2 5]\n",
+      " [3 6]] \n",
+      "\n",
+      "matrix1.transpose() shape: (3, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "print(matrix1)\n",
     "print('matrix1 shape:', matrix1.shape, '\\n')\n",
@@ -198,9 +263,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]\n",
+      "  [ 7  8  9]\n",
+      "  [10 11 12]]\n",
+      "\n",
+      " [[13 14 15]\n",
+      "  [16 17 18]\n",
+      "  [19 20 21]\n",
+      "  [22 23 24]]] \n",
+      "\n",
+      "shape of tensor2:  (2, 4, 3) \n",
+      "\n",
+      "[[[ 1 13]\n",
+      "  [ 4 16]\n",
+      "  [ 7 19]\n",
+      "  [10 22]]\n",
+      "\n",
+      " [[ 2 14]\n",
+      "  [ 5 17]\n",
+      "  [ 8 20]\n",
+      "  [11 23]]\n",
+      "\n",
+      " [[ 3 15]\n",
+      "  [ 6 18]\n",
+      "  [ 9 21]\n",
+      "  [12 24]]] \n",
+      "\n",
+      "shape of tensor2.transpose():  (3, 4, 2)\n"
+     ]
+    }
+   ],
    "source": [
     "tensor2 = np.array([[[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]], \n",
     "           [[13, 14, 15], [16, 17, 18], [19, 20, 21], [22, 23, 24]]])\n",
@@ -233,9 +333,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1,  2])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# numerical example \n",
     "\n",
@@ -256,11 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n",
+      "[ 5  6  7  8  9 10]\n"
+     ]
+    }
+   ],
    "source": [
     "scalar = 4\n",
     "print(vector)\n",
@@ -270,13 +390,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "v1 = np.array([1, 0, 1])\n",
     "m1 = np.array([[1, 2], [3, 4], [5, 6]])\n",
-    "m1 - v1"
+    "#m1 - v1\n",
+    "m1"
    ]
   },
   {
@@ -288,9 +422,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2  3]\n",
+      "  [ 4  5  6]\n",
+      "  [ 7  8  9]\n",
+      "  [10 11 12]]\n",
+      "\n",
+      " [[13 14 15]\n",
+      "  [16 17 18]\n",
+      "  [19 20 21]\n",
+      "  [22 23 24]]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(tensor2)"
    ]
@@ -337,9 +487,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  8],\n",
+       "       [ 5, 18]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Use NumPy to calculate the Hadamard product of\n",
     "# [[1, 2], [1, 2]] and [[3, 4], [5, 9]]\n",
@@ -419,11 +581,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "cell_style": "center"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[26, 32],\n",
+       "       [59, 76]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here: \n",
     "\n",
@@ -480,9 +654,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 4  8 10]\n",
+      " [ 3  9 12]\n",
+      " [ 5 10 15]] \n",
+      "\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]] \n",
+      "\n",
+      "[[ 4.  8. 10.]\n",
+      " [ 3.  9. 12.]\n",
+      " [ 5. 10. 15.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# showing the effect of multiplying by the identity matrix\n",
     "\n",
@@ -496,9 +688,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5.00000000e-01 -6.66666667e-01  2.00000000e-01]\n",
+      " [ 5.00000000e-01  3.33333333e-01 -6.00000000e-01]\n",
+      " [-5.00000000e-01 -7.40148683e-17  4.00000000e-01]] \n",
+      "\n",
+      "[[ 1.  0.  0.]\n",
+      " [-0.  1.  0.]\n",
+      " [-0. -0.  1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# inverse of x and multiplying by x\n",
     "\n",
@@ -547,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,9 +774,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.],\n",
+       "       [1.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = np.array([[1,-2],[3,2]])\n",
     "b = np.array([[1],[11]])\n",
@@ -793,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
